Fix alignment and css of navigation dropdown, buttons

--- a/css/button.css
+++ b/css/button.css
@@ -40,7 +40,7 @@
 
 /* Header Button Images */
 
-.header-search-button-img {
+.header__button-img {
     width: 20px;
     height: auto;
 
